fix button z-index

--- a/wp-content/themes/faces/app/sass/_common.scss
+++ b/wp-content/themes/faces/app/sass/_common.scss
@@ -132,6 +132,10 @@ figure img {
   z-index: 2;
 }
 
+.z-3 {
+  z-index: 3;
+}
+
 .bottom-0 {
   bottom: 0;
 }
